--- a/lang/fr.json
+++ b/lang/fr.json
@@ -3,7 +3,7 @@
         "vous a donn\u00e9 un cookie aux p\u00e9pites de chocolat !",
         "vous a donn\u00e9 un cookie aux flocons d'avoine !",
         "vous a donn\u00e9 un vieux cookie sec et rassis. C'\u00e9tait le dernier du paquet. D\u00e9go\u00fbtant !",
-        "vous donne un biscuit au sucre. Quoi, pas de gla\u00e7age ni vermicelles ? 0\/10 ne toucherait pas.",
+        "vous donne un biscuit au sucre. Quoi, pas de gla\u00e7age ni vermicelles ? 0\/10 je n'y toucherait pas.",
         "vous donne un cookie aux p\u00e9pites de chocolat. Oh attend, ce sont des raisins secs ! Berk !",
         "vous donne une \u00e9norme cookie. Appuyer dessus vous donne plus de cookies. Bizarre.",
         "vous donne un biscuit chinois. Il est \u00e9crit \"Pourquoi ne travaillez-vous pas sur aucun projet ?\"",
@@ -43,7 +43,6 @@
         "Les perspectives sont bonnes.",
         "Ne comptez pas dessus.",
         "Oui, en temps voulu.",
-        "Definitely not.",
         "D\u00e9finitivement pas.",
         "Vous devrez attendre.",
         "J'en doute.",
@@ -74,7 +73,7 @@
     "isopen": "\/me La roulette est maintenant ouverte ! Tapez !join pour participer ! (Un jeu o\u00f9 une participant au hasard est d\u00e9plac\u00e9 \u00e0 une position al\u00e9atoire dans la queue)",
     "winnerpicked": "\/me Un gagnant a \u00e9t\u00e9 trouv\u00e9 ! @%%NAME%% \u00e0 la position %%POSITION%%.",
     "ball": "\/me %%NAME%% a pos\u00e9 la question: \"%%QUESTION%%\" et la r\u00e9ponse de %%BOTNAME%% est: \"%%RESPONSE%%\"",
-    "notghosting": "[%%NAME1%%] %%NAME2%% n'est pas en fant\u00f4me.",
+    "notghosting": "[%%NAME1%%] %%NAME2%% n'est pas un fant\u00f4me.",
     "ghosting": "[%%NAME1%%] %%NAME2%% is either ghosting or not here.",
     "alreadyadding": "\/me  L'utilisateur est d\u00e9j\u00e0 en ajout ! Changement de la position d\u00e9sir\u00e9e \u00e0 %%POSITION%%.",
     "adding": "\/me Ajout de @%%NAME%% \u00e0 la file d'attente. Queue actuelle : %%POSITION%%.",
@@ -151,8 +150,8 @@
     "dclookuprank": "\/me [@%%NAME%%] Uniquement les Videurs peuvent v\u00e9rifier pour les autres.",
     "emojilist": "\/me Liste des Emoji : %%LINK%%",
     "notinwaitlist": "\/me @%%NAME%%, vous n'\u00eates pas dans la file d'attente.",
-    "youarenext": "\/me @%%NAME%%, you are DJing after this song.",
-    "youaredj": "\/me @%%NAME%%, you are currently DJing.",
+    "youarenext": "\/me @%%NAME%%, vous allez \u00eatre le dj juste apr\u00e8s cette musique.",
+    "youaredj": "\/me @%%NAME%%, vous \u00eates actuellement le dj .",
     "eta": "\/me @%%NAME%%, vous \u00eates \u00e0 la position %%POSITION%% dans la queue et vous atteignerez les platines dans \u00e0 peu pr\u00e8s %%TIME%%.",
     "facebook": "\/me Suivez-nous sur Facebook : %%LINK%%",
     "starterhelp": "\/me Cette image vous aidera \u00e0 d\u00e9buter sur plug : %%LINK%%",
@@ -171,8 +170,8 @@
     "maxlengthtime": "\/me [@%%NAME%%] La dur\u00e9e maximum d'une musique est maintenant de %%TIME%% minutes.",
     "motdset": "\/me Le MotD est maintenant : %%MSG%%",
     "motdintervalset": "\/me L'intervalle du MotD est maintenant de %%INTERVAL%%.",
-    "currentbotname": "\/me Bot name currently set to: %%BOTNAME%%",
-    "botnameset": "\/me Bot name now set to: %%BOTNAME%%",
+    "currentbotname": "\/me Le nom du bot est : %%BOTNAME%%",
+    "botnameset": "\/me Le nom du bot est maintenant: %%BOTNAME%%",
     "addbotwaitlist": "\/me @%%NAME%%, n'essaye pas de m'ajouter \u00e0 la liste d'attente, merci.",
     "move": "\/me [%%NAME%% a utilis\u00e9 move]",
     "mutednotime": "\/me [@%%NAME%%] A rendu muet @%%USERNAME%%.",
